[build-system]
requires = ['poetry-core>=1.5.1,<2']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'consul'
version = '1.0.0'
description = 'Python client for Consul (http://www.consul.io/)'
authors = ['yan.gao <373251686@qq.com>']
repository = 'https://forgejo.pyn.ru/hhru/python-consul2'
homepage = 'https://forgejo.pyn.ru/hhru/python-consul2'
readme = 'README.rst'

[tool.poetry.dependencies]
python = '>=3.9,<4.0'
packaging = ">=21.0"
requests = '*'
six = '>=1.4'
aiohttp = '>=3.8.3,<4.0'

[tool.poetry.group.test.dependencies]
pytest = '8.3.3'
pytest-asyncio = '0.24.0'
ruff = '0.6.9'


[tool.pytest.ini_options]
addopts = '''
  --tb native
  --asyncio-mode=auto
  -p no:warnings
'''

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint]
select = [
    'F','E','W','I','UP','YTT','ASYNC','A','COM','C4',
    'T10','DJ','EXE','FA','ISC','ICN','INP','PIE','T20','Q','RSE','SLOT',
    'TID','TCH','INT','FIX','ERA','PGH','PL','NPY','PERF','FURB','LOG'
]
ignore = [
    'PLW', 'PLR', 'ASYNC110', 'TCH001',
    'RSE102','TCH003','TCH002',
    'COM812', 'ISC001', 'FIX002', 'UP031'
]

[tool.ruff.lint.per-file-ignores]
'tests/**/*.py' = [
    'S101', # asserts allowed in tests
    'PLR2004', # Magic value used in comparison
    'S311', # Standard pseudo-random generators are not suitable for cryptographic purposes
    'E722','ERA001',
]
